--- a/src/Bundle/JoseFramework/Resources/views/data_collector/tab/jwe.html.twig
+++ b/src/Bundle/JoseFramework/Resources/views/data_collector/tab/jwe.html.twig
@@ -12,7 +12,7 @@
             </tr>
             </thead>
             <tbody>
-            {% for id, data in collector.get('jwe', 'getJWEBuilders') %}
+            {% for id, data in collector.getData().jwe.jwe_builders %}
                 <tr>
                     <td>{{ id }}</td>
                     <td>
@@ -55,7 +55,7 @@
             </tr>
             </thead>
             <tbody>
-            {% for id, data in collector.get('jwe', 'getJWEDecrypters') %}
+            {% for id, data in collector.getData().jwe.jwe_decrypters %}
                 <tr>
                     <td>{{ id }}</td>
                     <td>
@@ -87,29 +87,29 @@
             {% endfor %}
             </tbody>
         </table>
-        {% set keyEncryptionAlgorithms = collector.get('algorithm', 'getAlgorithmDetails') %}
-        {% if signatureAlgorithms['Key Encryption'] is defined %}
+        {% set encryptionAlgorithms = collector.getData().algorithm.algorithms %}
+        {% if encryptionAlgorithms['Key Encryption'] is defined %}
             <h4>Available Key Encryption Algorithms</h4>
             <ul>
-                {% for alias, alg in keyEncryptionAlgorithms['Key Encryption'] %}
+                {% for alias, alg in encryptionAlgorithms['Key Encryption'] %}
                     <li><span{% if alg.name == 'RSA1_5' %} class="severity-high"{% elseif 'ECDH-ES' in alg.name %} class="severity-medium"{% endif %}>{{ alg.name }} (alias: <i>{{ alias }})</i>{% if alg.name == 'RSA1_5' %}. This algorithm is not secured (known attacks).{% elseif 'ECDH-ES' in alg.name %}. This algorithm is very slow when used with curves P-256, P-384, P-521.{% endif %}</span></li>
                 {% endfor %}
             </ul>
             <h4>Available Content Encryption Algorithms</h4>
             <ul>
-                {% for alias, alg in contentEncryptionAlgorithms['Content Encryption'] %}
+                {% for alias, alg in encryptionAlgorithms['Content Encryption'] %}
                     <li>{{ alg.name }} (alias: <i>{{ alias }})</i></li>
                 {% endfor %}
             </ul>
             <h4>Compression Methods</h4>
             <ul>
-                {% for alias, name in collector.get('jwe', 'getCompressionMethodDetails') %}
+                {% for alias, name in collector.getData().jwe.compression_methods %}
                     <li>{{ name }} (alias: <i>{{ alias }})</i></li>
                 {% endfor %}
             </ul>
             <h4>JWE Serialization Modes</h4>
             <ul>
-                {% for alias, name in collector.get('jwe', 'getJWESerializationDetails') %}
+                {% for alias, name in collector.getData().jwe.jwe_serialization %}
                     <li>{{ name }} (alias: <i>{{ alias }})</i></li>
                 {% endfor %}
             </ul>
