Information about the crit header.

--- a/src/Bundle/JoseFramework/Resources/views/data_collector/tab/checker.html.twig
+++ b/src/Bundle/JoseFramework/Resources/views/data_collector/tab/checker.html.twig
@@ -38,6 +38,7 @@
                 {% endfor %}
             </ul>
         {% endif %}
+        <i>Please note that the header "crit" (critical) is always checked.</i>
         <h4>Claim Checker Managers</h4>
         {% if collector.getData().checker.claim_checker_managers is empty %}
             No claim checker manager.
