Headers to Header

--- a/src/Bundle/JoseFramework/Resources/views/data_collector/tab/checker.html.twig
+++ b/src/Bundle/JoseFramework/Resources/views/data_collector/tab/checker.html.twig
@@ -9,7 +9,7 @@
                 <thead>
                 <tr>
                     <th>Service ID</th>
-                    <th>Checked Headers</th>
+                    <th>Checked Header Parameters</th>
                 </tr>
                 </thead>
                 <tbody>
