--- a/src/Bundle/JoseFramework/Resources/views/data_collector/template.html.twig
+++ b/src/Bundle/JoseFramework/Resources/views/data_collector/template.html.twig
@@ -56,15 +56,15 @@
 
     <style>
         .severity-low {
-            background: yellow;
+            background-color: yellow;
             color: #000;
         }
         .severity-medium {
-            background: orange;
+            background-color: orange;
             color: #000;
         }
         .severity-high {
-            background: #B0413E;
+            background-color: #B0413E;
             color: #FFF;
             font-weight: bold;
         }
