--- a/src/Bundle/JoseFramework/Resources/views/data_collector/tab/checker.html.twig
+++ b/src/Bundle/JoseFramework/Resources/views/data_collector/tab/checker.html.twig
@@ -32,11 +32,24 @@
         {% if collector.getData().checker.header_checkers is empty %}
             No header checker.
         {% else %}
-            <ul>
+            <table>
+                <thead>
+                <tr>
+                    <th>Alias</th>
+                    <th>Checked header</th>
+                    <th>Is protected?</th>
+                </tr>
+                </thead>
+                <tbody>
                 {% for alias, data in collector.getData().checker.header_checkers %}
-                    <li>Alias: {{ alias }}, checked header: {{ data.header }}{% if data.protected %} (protected header){% endif %}</li>
+                    <tr>
+                        <td>{{ alias }}</td>
+                        <td>{{ data.header }}</td>
+                        <td>{% if data.protected %}Yes{% else %}No{% endif %}</td>
+                    </tr>
                 {% endfor %}
-            </ul>
+                </tbody>
+            </table>
         {% endif %}
         <i>Please note that the header "crit" (critical) is always checked.</i>
         <h4>Claim Checker Managers</h4>
@@ -70,11 +83,22 @@
         {% if collector.getData().checker.claim_checkers is empty %}
             No header checker.
         {% else %}
-            <ul>
+            <table>
+                <thead>
+                <tr>
+                    <th>Alias</th>
+                    <th>Checked claim</th>
+                </tr>
+                </thead>
+                <tbody>
                 {% for alias, data in collector.getData().checker.claim_checkers %}
-                    <li>Alias: {{ alias }}, checked claim: {{ data.claim }}</li>
+                    <tr>
+                        <td>{{ alias }}</td>
+                        <td>{{ data.claim }}</td>
+                    </tr>
                 {% endfor %}
-            </ul>
+                </tbody>
+            </table>
         {% endif %}
     </div>
 </div>
