--- a/src/Bundle/JoseFramework/Resources/views/data_collector/tab/jwe.html.twig
+++ b/src/Bundle/JoseFramework/Resources/views/data_collector/tab/jwe.html.twig
@@ -19,9 +19,12 @@
                         <ul>
                             {% for algorithm in data.key_encryption_algorithms %}
                                 <li>
-                                        <span{% if algorithm == 'RSA1_5' %} class="severity-high"{% elseif 'ECDH-ES' in algorithm %} class="severity-medium"{% endif %}>
-                                            {{ algorithm }}
-                                        </span>
+                                    <span{% if algorithm in collector.getData().algorithm.messages|keys %}
+                                     class="{{ collector.getData().algorithm.messages[algorithm]['severity'] }}"
+                                        {% else %}
+                                        {% endif %}>
+                                        {{ algorithm }}
+                                    </span>
                                 </li>
                             {% endfor %}
                         </ul>
@@ -29,7 +32,14 @@
                     <td>
                         <ul>
                             {% for algorithm in data.content_encryption_algorithms %}
-                                <li>{{ algorithm }}</li>
+                                <li>
+                                    <span{% if algorithm in collector.getData().algorithm.messages|keys %}
+                                        class="{{ collector.getData().algorithm.messages[algorithm]['severity'] }}"
+                                            {% else %}
+                                            {% endif %}>
+                                        {{ algorithm }}
+                                    </span>
+                                </li>
                             {% endfor %}
                         </ul>
                     </td>
@@ -142,29 +152,97 @@
         {% set encryptionAlgorithms = collector.getData().algorithm.algorithms %}
         {% if encryptionAlgorithms['Key Encryption'] is defined %}
             <h4>Available Key Encryption Algorithms</h4>
-            <ul>
+            <table>
+                <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Alias</th>
+                    <th>Message</th>
+                </tr>
+                </thead>
+                <tbody>
                 {% for alias, alg in encryptionAlgorithms['Key Encryption'] %}
-                    <li><span{% if alg.name == 'RSA1_5' %} class="severity-high"{% elseif 'ECDH-ES' in alg.name %} class="severity-medium"{% endif %}>{{ alg.name }} (alias: <i>{{ alias }})</i>{% if alg.name == 'RSA1_5' %}. This algorithm is not secured (known attacks).{% elseif 'ECDH-ES' in alg.name %}. This algorithm is very slow when used with curves P-256, P-384, P-521.{% endif %}</span></li>
+                    <tr>
+                        <td {% if alg.name in collector.getData().algorithm.messages|keys %}
+                            class="{{ collector.getData().algorithm.messages[alg.name]['severity'] }}"
+                                {% endif %}>{{ alg.name }}</td>
+                        <td {% if alg.name in collector.getData().algorithm.messages|keys %}
+                            class="{{ collector.getData().algorithm.messages[alg.name]['severity'] }}"
+                                {% endif %}>{{ alias }}</td>
+                        <td {% if alg.name in collector.getData().algorithm.messages|keys %}
+                            class="{{ collector.getData().algorithm.messages[alg.name]['severity'] }}"
+                                {% endif %}>
+                            {% if alg.name in collector.getData().algorithm.messages|keys %}
+                                {{ collector.getData().algorithm.messages[alg.name]['message']|raw }}
+                            {% endif %}
+                        </td>
+                    </tr>
                 {% endfor %}
-            </ul>
+                </tbody>
+            </table>
             <h4>Available Content Encryption Algorithms</h4>
-            <ul>
+            <table>
+                <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Alias</th>
+                    <th>Message</th>
+                </tr>
+                </thead>
+                <tbody>
                 {% for alias, alg in encryptionAlgorithms['Content Encryption'] %}
-                    <li>{{ alg.name }} (alias: <i>{{ alias }})</i></li>
+                    <tr>
+                        <td {% if alg.name in collector.getData().algorithm.messages|keys %}
+                            class="{{ collector.getData().algorithm.messages[alg.name]['severity'] }}"
+                                {% endif %}>{{ alg.name }}</td>
+                        <td {% if alg.name in collector.getData().algorithm.messages|keys %}
+                            class="{{ collector.getData().algorithm.messages[alg.name]['severity'] }}"
+                                {% endif %}>{{ alias }}</td>
+                        <td {% if alg.name in collector.getData().algorithm.messages|keys %}
+                            class="{{ collector.getData().algorithm.messages[alg.name]['severity'] }}"
+                                {% endif %}>
+                            {% if alg.name in collector.getData().algorithm.messages|keys %}
+                                {{ collector.getData().algorithm.messages[alg.name]['message']|raw }}
+                            {% endif %}
+                        </td>
+                    </tr>
                 {% endfor %}
-            </ul>
+                </tbody>
+            </table>
             <h4>Compression Methods</h4>
-            <ul>
+            <table>
+                <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Alias</th>
+                </tr>
+                </thead>
+                <tbody>
                 {% for alias, name in collector.getData().jwe.compression_methods %}
-                    <li>{{ name }} (alias: <i>{{ alias }})</i></li>
+                    <tr>
+                        <td>{{ name }}</td>
+                        <td>{{ alias }}</td>
+                    </tr>
                 {% endfor %}
-            </ul>
+                </tbody>
+            </table>
             <h4>JWE Serialization Modes</h4>
-            <ul>
+            <table>
+                <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Alias</th>
+                </tr>
+                </thead>
+                <tbody>
                 {% for alias, name in collector.getData().jwe.jwe_serialization %}
-                    <li>{{ name }} (alias: <i>{{ alias }})</i></li>
+                    <tr>
+                        <td>{{ name }}</td>
+                        <td>{{ alias }}</td>
+                    </tr>
                 {% endfor %}
-            </ul>
+                </tbody>
+            </table>
         {% else %}
             The is no encryption algorithm. Did you installed "web-token/jwt-encryption-bundle"?
         {% endif %}
